k8s/gosty/gosty-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gosty-worker
  name: gosty-worker
  namespace: gosty
spec:
  replicas: 4
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: gosty-worker
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: gosty-worker
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: topology.kubernetes.io/hostname
      containers:
        - envFrom:
            - configMapRef:
                name: gosty-config
          image: 192.168.56.1:5000/gosty-worker:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /live
              port: 8002
            initialDelaySeconds: 5
            periodSeconds: 3
          name: gosty-worker
          readinessProbe:
            httpGet:
              path: /ready
              port: 8002
            initialDelaySeconds: 5
            periodSeconds: 3
---
