k8s/gosty/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gosty-worker
  name: gosty-worker
  namespace: gosty
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: gosty-worker
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: gosty-worker
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: topology.kubernetes.io/hostname
      containers:
        - resources:
            requests:
              cpu: "256m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          image: luqmansen/gosty-worker:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /live
              port: 8002
            initialDelaySeconds: 5
            periodSeconds: 3
          name: gosty-worker
          readinessProbe:
            httpGet:
              path: /ready
              port: 8002
            initialDelaySeconds: 5
            periodSeconds: 3
---
