k8s/gosty/apiserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gosty-apiserver
  name: gosty-apiserver
  namespace: gosty
spec:
  replicas: 1
  revisionHistoryLimit: 1
  minReadySeconds: 10
  selector:
    matchLabels:
      app: gosty-apiserver

  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: gosty-apiserver

    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                topologyKey: topology.kubernetes.io/hostname
              weight: 100

      containers:
        - image: luqmansen/gosty-apiserver:latest
          name: gosty-apiserver
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /live
              port: 8086
            initialDelaySeconds: 10

          readinessProbe:
            httpGet:
              path: /ready
              port: 8086
            initialDelaySeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: gosty-apiserver
  namespace: gosty
spec:
  type: NodePort
  selector:
    app: gosty-apiserver
  ports:
    - port: 80
      name: http
      targetPort: 8000
      nodePort: 30000
    - port: 8086
      name: health
      targetPort: 8086
      nodePort: 30086
