k8s/gosty/fileserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: gosty-fileserver
  namespace: gosty
spec:
  type: NodePort
  selector:
    app: gosty-fileserver
  ports:
    - port: 80
      targetPort: 8001
      nodePort: 30001

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: gosty-fileserver
  name: gosty-fileserver
  namespace: gosty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gosty-fileserver
  serviceName: gosty-fileserver

  volumeClaimTemplates:
    - metadata:
        name: pv-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi

  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: gosty-fileserver
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: topology.kubernetes.io/hostname
      containers:
        - image: luqmansen/gosty-fileserver:latest
          name: gosty-fileserver
          ports:
            - containerPort: 8001
          volumeMounts:
            - name: pv-data
              mountPath: /app/storage
