k8s/gosty/gosty-apiserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gosty-apiserver
  name: gosty-apiserver
  namespace: gosty
spec:
  replicas: 3
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: gosty-apiserver

  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: gosty-apiserver

    spec:
      containers:
        - image: 10.98.241.154/gosty-apiserver:latest
          name: gosty-apiserver
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: gosty-apiserver
  namespace: gosty
spec:
  type: ClusterIP
  selector:
    app: gosty-apiserver
  ports:
  - port: 80
    name: http
    targetPort: 8000
