k8s/gosty/gosty-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gosty-web
  name: gosty-web
  namespace: gosty
spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: gosty-web
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: gosty-web
    spec:
      containers:
        - image: 10.98.241.154/gosty-web:latest
          imagePullPolicy: Always
          name: gosty-web
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: gosty-web
  namespace: gosty
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: gosty-web
---
